images file correction

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
                     <div class="media">
                         <div class="media-left">
-                            <img src="../images/monkees50-fade.png" class="img-square media-object" height=150 width=230>
+                            <img src="./images/monkees50-fade.png" class="img-square media-object" height=150 width=230>
                         </div>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                     </div>
                     <div class="band-image">
                         <p class="calling-text text-color">Discover The Monkees</p>
-                        <img src="../images/cover3.jpg" height=210 width=330>
+                        <img src="./images/cover3.jpg" height=210 width=330>
                     </div>
                     <hr>
                     <p class="title-text text-color">In 1965, over 400 people responded to an ad seeking young men for a new television
@@ -133,7 +133,7 @@
                     <div class="col-xs-12 col-md-6">
                         <div class="media">
                             <div class="media-left">
-                            <img src="../images/dj.jpg" class="img-square media-object" height=100 width=100>
+                            <img src="./images/dj.jpg" class="img-square media-object" height=100 width=100>
                             </div>
                             <div class="media-body">
                                 <p class="title-text text-color">Davey Jones... Vocals</p>
@@ -147,7 +147,7 @@
                     <div class="col-xs-12 col-md-6">
                         <div class="media">
                             <div class="media-left">
-                            <img src="../images/md.jpg" class="img-square media-object" height=100 width=100>
+                            <img src="./images/md.jpg" class="img-square media-object" height=100 width=100>
                             </div>
                             <div class="media-body">
                                     <p class="title-text text-color">Micky Dolenz... Vocals-drums</p>
@@ -164,7 +164,7 @@
                     <div class="col-xs-12 col-md-6">
                         <div class="media">
                             <div class="media-left">
-                            <img src="../images/mn.jpg" class="img-square media-object" height=100 width=100>
+                            <img src="./images/mn.jpg" class="img-square media-object" height=100 width=100>
                             </div>
                             <div class="media-body">
                                 <p class="title-text text-color">Michael Neysmith... Guitar-vocals</p>
@@ -179,7 +179,7 @@
                     <div class="col-xs-12 col-md-6">
                         <div class="media">
                             <div class="media-left">
-                            <img src="../images/pt.jpg" class="img-square media-object" height=100 width=100>
+                            <img src="./images/pt.jpg" class="img-square media-object" height=100 width=100>
                             </div>
                             <div class="media-body">
                                 <p class="title-text text-color">Peter Tork... Bass guitar-vocals-keyboard</p>
@@ -216,7 +216,7 @@
                             <div class="title-box-3">
                                 <div class="media-left">
                                      <div class="media-left">
-                            <img src="../images/monkees50-red1.png" class="img-square media-object" height=250 width=250>
+                            <img src="./images/monkees50-red1.png" class="img-square media-object" height=250 width=250>
                             </div>
                                 <p class="title-text">THE MONKEES 50th anniversary live tour</p>
                                 <br>
@@ -378,40 +378,40 @@
                     <hr>
                     <div class="col-xs-12 col-md-6 col-lg-6">
                         <div class="media-album">
-                            <img src="../images/last train to clarksville.png" class="img-square media-object" height=300 width=300><P class="title-text">Last Train To Clarksville</P>
+                            <img src="./images/last train to clarksville.png" class="img-square media-object" height=300 width=300><P class="title-text">Last Train To Clarksville</P>
                         </div>  
                             <audio controls>
-                            <source src="/audio/Clarksville.mp3" type="audio/mpeg">
+                            <source src="./audio/Clarksville.mp3" type="audio/mpeg">
                             Your browser does not support the audio element.
                             </audio>
                             <hr>
                         </div>
                     <div class="col-xs-12 col-md-6 col-lg-6">
                         <div class="media-album">
-                            <img src="../images/daydream believer.png" class="img-square media-object" height=300 width=300><P class="title-text">Daydream Believer</P>
+                            <img src="./images/daydream believer.png" class="img-square media-object" height=300 width=300><P class="title-text">Daydream Believer</P>
                         </div> 
                             <audio controls>
-                            <source src="/audio/DaydreamBeliever.mp3" type="audio/mpeg">
+                            <source src="./audio/DaydreamBeliever.mp3" type="audio/mpeg">
                             Your browser does not support the audio element.
                             </audio>
                             <hr>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-6">
                         <div class="media-album">
-                            <img src="../images/steppin stone.png" class="img-square media-object" height=300 width=300><P class="title-text">Steppin' Stone:</P>
+                            <img src="./images/steppin stone.png" class="img-square media-object" height=300 width=300><P class="title-text">Steppin' Stone:</P>
                         </div>
                             <audio controls>
-                            <source src="/audio/SteppingStone.mp3" type="audio/mpeg">
+                            <source src="./audio/SteppingStone.mp3" type="audio/mpeg">
                             Your browser does not support the audio element.
                             </audio>
                             <hr>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-6">
                         <div class="media-album">
-                            <img src="../images/im a believer.png" class="img-square media-object" height=300 width=300><P class="title-text">Im A Believer</P>
+                            <img src="./images/im a believer.png" class="img-square media-object" height=300 width=300><P class="title-text">Im A Believer</P>
                         </div>
                             <audio controls>
-                            <source src="/audio/ImABeliever.mp3" type="audio/mpeg">
+                            <source src="./audio/ImABeliever.mp3" type="audio/mpeg">
                             Your browser does not support the audio element.
                             </audio>
                             <hr>
@@ -429,7 +429,7 @@
                             
                             <h4 class="title-text">Daydream Believer:</h4>
                             <video width="275" height="190" controls>
-                            <source src="/video/TheMonkees.mp4" type="video/mp4">
+                            <source src="./video/TheMonkees.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                             </video>
                             
@@ -514,11 +514,11 @@
                                     <h3 class="calling-text">The Monkees 50th Anniversary Blu-ray Collection.....</h4>
                                 </div>
                                 <div class="hidden-xs">
-                                <img src="../images/monkeesdvd.png" class="img-square media-object" height=400 width=400>
+                                <img src="./images/monkeesdvd.png" class="img-square media-object" height=400 width=400>
                                     <p class="main-text">The monkees make the jump into the 21st Century with this High Definition collection</p>
                                 </div>
                                 <div class="hidden-sm hidden-md hidden-lg">
-                                <img src="../images/monkeesdvd.png" class="img-square media-object" height=250 width=250>
+                                <img src="./images/monkeesdvd.png" class="img-square media-object" height=250 width=250>
                                     <p class="main-text">The monkees make the jump into the 21st Century with this High Definition collection</p>
                                 </div>
                             </div>
@@ -561,11 +561,11 @@
                                     (SUPER DELUXE EDITION)....</h4>
                                 </div>
                                 <div class="hidden-xs">
-                                <img src="../images/monkees-cd.png" class="img-square media-object" height=400 width=400>
+                                <img src="./images/monkees-cd.png" class="img-square media-object" height=400 width=400>
                                     <p class="main-text">MORE OF THE MONKEES with a staggering 91 tracks</p>
                                 </div>
                                 <div class="hidden-sm hidden-md hidden-lg">
-                                <img src="../images/monkees-cd.png" class="img-square media-object" height=250 width=250>
+                                <img src="./images/monkees-cd.png" class="img-square media-object" height=250 width=250>
                                     <p class="main-text">MORE OF THE MONKEES with a staggering 91 tracks</p>
                                 </div>
                             </div>
