--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 
 <!--home callout-----> 
 
-<div class=" hidden-xs hidden-sm container-wrapper">
+<div class="hidden-xs container-wrapper">
     <div class="container-fluid home-container">
         <section class="home">
             <div class="row">
-                <div class="col-xs-12 col-sm-4 col-md-6 col-lg-6">
+                <div class="col-xs-12 col-sm-4 col-md-6 col-lg-6 hidden-sm">
                     <div class="home-footer">
                     THE MONKEES
                     <br>
