final project review

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                                     any other type of event.
                                     <br>
                                     To get in contact or to arrange a booking for an event please submit your details
-                                    and a member of our management team will be in touc.
+                                    and a member of our management team will be in touch
                                     to discuss the booking further.</p>
                                 </blockquote>
                                 <form action="http://posttestserver.com/post.php" method="post">
@@ -743,7 +743,7 @@
                                     be the first to know about new releases and tour dates from the Monkees.</p>
                                 </blockquote>
                                 <div class="media-body">
-                                <form action="http://posttestserver.com/post.php" method="post">
+                                <form action="" method="post">
                                     <div class="form-group input-text text-color">
                                         <label for="name">Full Name</label>
                                         <input type="text" class="form-control" id="name" placeholder="Full Name" required>
