--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
             <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
                 <div class="media">
                     <div class="media-left">
-                        <a href="#events"><img src="./images/monkees50-fade.png" class="img-square media-object" height=90 width=160 alt="monkees logo"></a>
-                        <p class="main-text-bold">TOUR DATES & TICKETS</p> 
+                        <div class="home-image-link">
+                            <a href="#events"><img src="./images/monkees50-fade.png" class="img-square media-object" height=90 width=160 alt="monkees logo"></a>
+                        <p class="main-text-bold">CLICK HERE FOR TICKETS</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -113,12 +115,12 @@
                     <div class="col-xs-12 col-md-12 col-lg-12">
                         <div class="title-box-3">
                             <div class="sub-heading-band">
-                            <h2 class="text-color-black">The Monkees</h2>
+                            <h2 class="text-color-black">THE MONKEES</h2>
                            </div>
                             <p class="band-title-text title-text-color">In 1965, over 400 people responded to an ad seeking young men for a new television
                             show about a rock group called The Monkees. The Monkees, starring Davy Jones, Micky Dolenz, Michael Nesmith, and Peter Tork 
                             premiered on September 12, 1966, and audiences adored the humorous antics of the band. 
-                            Though made for TV, The Monkees had real-life hits. Some of their best-loved and number one hits included 
+                            Initially made for TV, The Monkees had real chart hits. Some of their best-loved and number one hits included 
                             "I'm a Believer" and "Last Train to Clarksville." More successful singles followed, incuding "Little Bit Me, 
                             Little Bit You" to "Pleasant Valley Sunday", and "Daydream Believer".</p>
                         </div>
@@ -126,7 +128,7 @@
                     <hr>
                     <div class="col-xs-12">
                         <div class="sub-heading">
-                            <h2 class="sub-text-color">Discover The Band</h2>
+                            <h2 class="sub-text-color">BAND MEMBERS</h2>
                             <hr>
                         </div>
                     </div>
@@ -139,13 +141,12 @@
                                 </div>
                             </div>
                             <div class="media-body">
-                                <p class="title-text text-color">Davey Jones...
-                                <br>
-                                Vocals</p>
-                                <p class="main-text text-color">Born December 30th 1945, Davy Jones attracted a 
-                                lot of attention from fans for his charm, wit and warm sense 
+                                <p class="title-text text-color">Davey Jones</p>
+                                <p class="main-text-bold">Vocals</p>
+                                <p class="main-text text-color">Davey Jones, Born December 1945, attracted a 
+                                lot of attention from fans for his wit and warm sense 
                                 of humor when The Monkees debuted on television in September 1966. 
-                                The Monkees soon scored on the music charts with hits like "I'm a Believer," 
+                                As part of The Monkees, he soon scored on the music charts with hits like "I'm a Believer," 
                                 and "Daydream Believer".</p>
                             </div>
                         </div>
@@ -158,9 +159,8 @@
                                 </div>
                             </div>    
                             <div class="media-body">
-                                <p class="title-text text-color">Micky Dolenz...
-                                <br>
-                                Vocals-drums</p>
+                                <p class="title-text text-color">Micky Dolenz</p>
+                                <p class="main-text-bold">Vocals-drums</p>
                                 <p class="main-text text-color">Singer, musician, actor, writer, producer, director.
                                 Born George Michael Dolenz on March 8, 1945, in Los Angeles, California. 
                                 He had a few television roles and played with bands before being cast in 
@@ -177,14 +177,13 @@
                                 </div>
                             </div>
                             <div class="media-body">
-                                <p class="title-text text-color">Michael Neysmith... 
-                                <br>
-                                Guitar-vocals</p>
+                                <p class="title-text text-color">Michael Neysmith</p> 
+                                <p class="main-text-bold">Guitar-vocals</p>
                                 <p class="main-text text-color">Born in Texas in 1942, Nesmith served 
                                 in the U.S. Air Force before pursuing a career in music. 
                                 He signed on to become a member of the Monkees, a television 
-                                rock group, in the mid-1960s. The Monkees enjoyed tremendous 
-                                success on the pop charts. </p>
+                                rock group, in the mid-1960s. He enjoyed tremendous 
+                                success with the band on the pop charts. </p>
                             </div>
                         </div>
                     </div>
@@ -196,12 +195,11 @@
                                 </div>
                             </div>    
                             <div class="media-body">
-                                <p class="title-text text-color">Peter Tork... 
-                                <br>
-                                Bass guitar-vocals-keyboard</p>
+                                <p class="title-text text-color">Peter Tork</p>
+                                <p class="main-text-bold">Bass guitar-vocals-keyboard</p>
                                 <p class="main-text text-color">Born in 1942, Peter Tork achieved big pop music 
-                                success in the 1960s, with such hits as "Daydream Believer" and "Last 
-                                Train to Clarksville." Moving to California, he landed a part in 
+                                success in the 1960s, with such hits as "Last 
+                                Train to Clarksville." Upon moving to California, he landed a part in 
                                 The Monkees television series in 1965. The fictional band soon became 
                                 a real hit, scoring several No. 1 songs.</p>
                             </div>
@@ -235,7 +233,9 @@
                             <div class="title-box">
                                 <div class="media-left">
                                     <div class="media-left">
-                                        <img src="./images/monkees50-red1.png" class="img-square media-object" height=250 width=250 alt="monkees logo">
+                                        <div class="home-image-link">
+                                            <img src="./images/monkees50-red1.png" class="img-square media-object" height=250 width=250 alt="monkees logo">
+                                        </div>
                                     </div>
                                         <p class="title-text">THE MONKEES 50th ANNIVERSARY LIVE TOUR</p>
                                         <br>
@@ -529,12 +529,12 @@
                         <div class="media">
                             <div class="title-box">
                                 <div class="media-left">
-                                    <p class="main-text">As you may well know, The Monkees are embarking
+                                    <p class="main-text">The Monkees are embarking
                                     on a live tour this year and bringing with them all the classic
                                     hits they have amassed over the past 50 years.
                                     <br>
                                     If you are interested in catching The Monkees live you can
-                                    check out all the tour dates and venues <a href="#events">HERE</a>
+                                    check out all the tour dates and venues <a href="#events">HERE</a>.
                                     <br>
                                     To coinside with the live tour, The Monkees have released a greatest hits album 
                                     and a Blu-ray collection, its your chance to reminisce over all the
@@ -607,8 +607,7 @@
                                         MORE OF THE MONKEES: SUPER DELUXE EDITION includes all their hits along with mono and stereo mixes of the 
                                         original album, the SUPER DELUXE EDITION takes listeners into the studio for the 
                                         making of the album through extensive studio outtakes.. 
-                                        Backing tracks for early version of "Sometime In The Morning," "I'm A Believer" and "Look Out 
-                                        (Here Comes Tomorrow)" offer a behind-the-scenes perspective on the creative process. 
+                                        Backing tracks for early version of "Sometime In The Morning" and "I'm A Believer" offer a behind-the-scenes perspective on the creative process. 
                                         </p> 
                                     </div>
                                 </div>
@@ -647,7 +646,7 @@
                                     It is now possible to have The Monkees perform at an event such as a wedding a christmas party or
                                     any other type of event.
                                     <br>
-                                    To get in contact or to arrange a booking for an event please submit your details
+                                    To get in contact and to arrange a booking for an event please submit your details
                                     and a member of our management team will be in touch
                                     to discuss the booking further.</p>
                                 </blockquote>
@@ -661,11 +660,11 @@
                                     It is now possible to have The Monkees perform at an event such as a wedding a christmas party or
                                     any other type of event.
                                     <br>
-                                    To get in contact or to arrange a booking for an event please submit your details
+                                    To get in contact and to arrange a booking for an event please submit your details
                                     and a member of our management team will be in touch
                                     to discuss the booking further.</p>
                                 </blockquote>
-                                <form action="http://posttestserver.com/post.php" method="post">
+                                <form action="/action_page.php" method="post">
                                     <div class="form-group input-text text-color">
                                         <label for="name">Full Name</label>
                                         <input type="text" class="form-control" id="name" placeholder="Full Name" required>
@@ -743,7 +742,7 @@
                                     be the first to know about new releases and tour dates from the Monkees.</p>
                                 </blockquote>
                                 <div class="media-body">
-                                <form action="" method="post">
+                                <form action="/action_page.php" method="post">
                                     <div class="form-group input-text text-color">
                                         <label for="name">Full Name</label>
                                         <input type="text" class="form-control" id="name" placeholder="Full Name" required>
@@ -775,9 +774,8 @@
     <div class="container footer-container">
         <div class="row">
             <div class="col-xs-6">
-                <p class="footer-brand">THE MONKEES
-                <br>
-                2018</p>
+                <p class="footer-brand">THE MONKEES</p>
+                <p>2018</p>
             </div>
 <!--social links-->               
             <div class="col-xs-6">
